clusters/lab/gitops/platform/longhorn/longhorn-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private-https
      namespace: gateway-system
      sectionName: https-wildcard
  hostnames:
    - longhorn.home.rboiko.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Forwarded-Port
                value: "443"
      backendRefs:
        - group: ""
          kind: Service
          name: authentik-server
          namespace: authentik
          port: 80
          weight: 1
